--- a/.env
+++ b/.env
@@ -1,18 +1,39 @@
 PORT = 8000
-# MONGO_URI = mongodb://localhost:27017/Ambikaniketan
+MONGO_URI = mongodb://localhost:27017/Ambikaniketan
 
-MONGO_URI = mongodb+srv://shobhitdamwala_db_user:f2Z8B9ahO7zLt3fo@cluster0.lawnojn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URI = mongodb+srv://shobhitdamwala_db_user:f2Z8B9ahO7zLt3fo@cluster0.lawnojn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET=AmbikaKetantrust12345
 JWT_EXPIRES_IN = 7d
 
-FRONTEND_URL = http://localhost:5173
+FRONTEND_URL = http://localhost:5173,http://localhost:5174
 
 
 # Razorpay keys
 RZP_KEY_ID=rzp_live_RK7uiqyZ6uUp9p   # replace with your key_id
 RZP_KEY_SECRET=ATVmnoHdILSbWzoEdXCzlEuY   # replace with your key_secret
-RZP_WEBHOOK_SECRET=xxxxxxxxxxxxxxxx  # generate in Razorpay dashboard
+RZP_WEBHOOK_SECRET=Ambikaniketan  # generate in Razorpay dashboard
 
 # Receipt expiry (days)
 RECEIPT_LINK_EXPIRES_DAYS=30
+
+
+PORT=8000
+CAM_HOST=116.72.9.115
+CAM_LOGIN_PATH=/doc/page/login.asp
+# optional override (leave empty to auto-detect)
+# CAM_LOGIN_PATH=/doc/page/login.asp
+CAM_USER=gopal
+CAM_PASS=Abcd@1234
+# default will be /preview.asp — update if you find an actual MJPEG URL
+CAM_STREAM_PATH=/doc/page/preview.asp
+
+UPLOADS_DIR=./uploads
+RECEIPT_LINK_EXPIRES_DAYS=30
+
+SMTP_HOST=smtp.gmail.com        # Example: Gmail SMTP
+SMTP_PORT=587                   # 465 if using SSL
+SMTP_USER=shobhitdamwala@gmail.com  # Email address that will send the receipts
+SMTP_PASS=ntza nmtd koan rgzx     # App-specific password or SMTP password
+
+NODE_ENV=development
