--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ MONGO_URI = mongodb+srv://shobhitdamwala_db_user:f2Z8B9ahO7zLt3fo@cluster0.lawno
 JWT_SECRET=AmbikaKetantrust12345
 JWT_EXPIRES_IN = 7d
 
-FRONTEND_URL = http://localhost:5173,http://localhost:5174
+FRONTEND_URL = http://localhost:5173,http://localhost:5174,https://ambikaniketan.netlify.app/
 
 
 # Razorpay keys
