--- a/.env
+++ b/.env
@@ -1,13 +1,15 @@
 PORT = 8000
-#MONGO_URI = mongodb://localhost:27017/Ambikaniketan
+MONGO_URI = mongodb://localhost:27017/Ambikaniketan
 
-MONGO_URI = mongodb+srv://shobhitdamwala_db_user:f2Z8B9ahO7zLt3fo@cluster0.lawnojn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+#MONGO_URI = mongodb+srv://shobhitdamwala_db_user:f2Z8B9ahO7zLt3fo@cluster0.lawnojn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET=AmbikaKetantrust12345
 JWT_EXPIRES_IN = 7d
 
-#FRONTEND_URL = http://localhost:5173,http://localhost:5174,https://ambikaniketan.netlify.app
-FRONTEND_URL=https://ambikaniketan.netlify.app
+FRONTEND_URL = http://localhost:5173,http://localhost:5174
+#FRONTEND_URL=https://ambikaniketan.netlify.app
+
+
 
 # Razorpay keys
 RZP_KEY_ID=rzp_live_RK7uiqyZ6uUp9p   # replace with your key_id
