--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "node-fetch": "^2.7.0",
+    "node-media-server": "^4.0.21",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "pdfkit": "^0.17.2",
