--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ JWT_SECRET=AmbikaKetantrust12345
 JWT_EXPIRES_IN = 7d
 
 # FRONTEND_URL = http://localhost:5173,http://localhost:5174
-FRONTEND_URL=https://shriambikaniketantrust.org
+FRONTEND_URL=https://shriambikaniketantrust.org,https://shriambikaniketantrustadmin.netlify.app
 
 
 
